atualização para o cenario MAPC 2020